[package]
name = "critical-section"
version = "1.0.0-alpha.2"
edition = "2018"
description = "Cross-platform critical section"
repository = "https://github.com/embassy-rs/critical-section"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "concurrency",
]

[features]

# Set the RestoreState size.
# The crate supplying the critical section implementation can set ONE of them.
# Other crates MUST NOT set any of these.
restore-state-none = []  # Default
restore-state-bool = []
restore-state-u8 = []
restore-state-u16 = []
restore-state-u32 = []
restore-state-u64 = []
