[package]
name = "critical-section"
version = "0.2.8"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
description = "Critical section abstraction"
repository = "https://github.com/embassy-rs/critical-section"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std",
    "concurrency",
]

[features]
custom-impl = ["critical-section/restore-state-u8"]

[dependencies]
bare-metal = "1.0.0"
critical-section = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
